<resources>
    <string name="app_name">MangoTesting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth">Авторизоваться</string>
    <string name="accept">Подтвердить</string>
    <string name="sms_code">Код из смс</string>
    <string name="phone_number">Номер телефона</string>
    <string name="name">Имя</string>
    <string name="username">Username</string>
    <string name="register">Зарегистрироваться</string>
    <string name="city">Город</string>
    <string name="birthday">Дата рождения</string>
    <string name="sign">Знак зодиака</string>
    <string name="description">О себе</string>
    <string name="phone">Номер телефона</string>
    <string name="save">Сохранить</string>
</resources>