<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.RedactProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_launcher_background"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/name"
                    tools:ignore="NestedWeights"
                    style="@style/profile_big_text"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="NoName"
                    style="@style/profile_big_text"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="Uname"
                    tools:ignore="NestedWeights"
                    style="@style/profile_big_text"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="NoUserName"
                    style="@style/profile_big_text"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow>
            <TextView
                android:text="Номер: "
                style="@style/profile_small_text"/>
            <TextView
                android:id="@+id/phone"
                android:text="NoPhone"
                style="@style/profile_small_text"/>
        </TableRow>

        <TableRow>

            <TextView
                style="@style/profile_small_text"
                android:layout_width="72dp"
                android:text="@string/city" />
            <EditText
                android:id="@+id/city"
                style="@style/profile_small_text"
                android:inputType="text"/>
        </TableRow>

        <TableRow>

            <TextView
                style="@style/profile_small_text"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="Д.р." />
            <EditText
                android:id="@+id/day"
                android:hint="День"/>

            <EditText
                android:id="@+id/mounth"
                android:hint="Месяц"/>

            <EditText
                android:id="@+id/year"
                android:hint="Год"/>

        </TableRow>


        <TableRow>
            <TextView
                android:text="@string/description"
                style="@style/profile_small_text"/>
            <EditText
                android:id="@+id/description"
                style="@style/profile_small_text"
                android:inputType="text"/>
        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/save"/>


</LinearLayout>